# igbo-archives-platform

./: .env.example  .gitignore  .replit  AUDIT_REPORT_IGBO_ARCHIVES.md  CORE_APP_AUDIT.md  PROJECT_AUDIT.md  README.md  ROOT_AND_PROJECT_AUDIT.md  TECHNICAL_DOCUMENTATION.md  archives_error.txt  backup_to_r2.py  db.sqlite3  gunicorn_config.py  main.py  manage.py  migrate_authors.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  tailwind.config.js  test_ai_integration.py  test_error.txt  test_output.txt  verify_tts.py
.github/workflows/: deploy.yaml
ai/: admin.py  apps.py  models.py  models.yaml  tests.py  urls.py  views.py
ai/migrations/: 0001_initial.py  0002_initial.py  0002_remove_archiveanalysis_archive_and_more.py  0003_initial.py  0004_alter_archiveanalysis_analysis_type.py
ai/services/: __init__.py  chat_service.py  constants.py  gemini_service.py  groq_service.py  key_manager.py  stt_service.py  tts_service.py  url_validators.py  vision_service.py
api/: apps.py  push_views.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
archives/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
archives/migrations/: 0001_initial.py  0002_alter_archive_audio_alter_archive_document_and_more.py  0002_archive_sort_year_archive_arch_sort_year_idx.py  0002_initial.py  0003_add_slug_field.py  0003_alter_archiveitem_unique_together_and_more.py  0003_archive_is_rejected_archive_rejection_reason.py  0004_alter_category_options_remove_archive_tags_and_more.py  0004_author_alter_archive_original_author_archive_author.py  0004_remove_archive_arch_slug_idx_and_more.py  0005_alter_archive_is_approved_archive_arch_slug_idx.py  0005_archive_arch_circa_date_idx_and_more.py  0005_archive_audio_url_archive_document_url_and_more.py  0006_authordescriptionrequest_proposed_image.py  0007_alter_category_slug.py
books/: admin.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_bookreview_alternate_cover_and_more.py  0002_initial.py  0002_remove_extra_cover_images.py  0003_alter_userbookrating_unique_together_and_more.py  0003_bookrecommendation_is_rejected_and_more.py  0004_alter_bookrecommendation_added_by.py  0004_remove_bookrecommendation_tags.py  0005_alter_bookrecommendation_slug.py
commentapp/: __init__.py
core/: admin.py  apps.py  context_processors.py  editorjs_helpers.py  email_service.py  forms.py  image_utils.py  indexnow.py  models.py  notifications_utils.py  similarity.py  sitemaps.py  social_platforms.py  tasks.py  tests.py  turnstile.py  urls.py  validators.py  views.py
core/migrations/: 0001_email_tracking.py  0002_alter_digestqueue_content_type.py  0003_drop_unused_tables.py
core/static/: serviceworker.js
core/templates/: 403.html  (+3 more)
docs/: API.md  MCP.md
igbo_archives/: asgi.py  settings.py  sqlite_wal.py  urls.py  wsgi.py
insights/: admin.py  edit_suggestion_views.py  models.py  signals.py  tests.py  urls.py  views.py
lore/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
static/: serviceworker.js
staticfiles/: serviceworker.js
templates/: 400.html  403.html  404.html  500.html  base.html  offline.html  robots.txt
users/: adapters.py  admin.py  admin_views.py  api_views.py  forms.py  models.py  notifications_views.py  signals.py  tests.py  urls.py  username_utils.py  utils.py  views.py
(+223 files in other folders)
