[project]
name = "igbo-archives-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django==5.1.4",
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "boto3==1.34.0",
    "django-storages==1.14.2",
    "Pillow==10.2.0",
    "python-dotenv==1.0.1",
    "django-allauth==0.63.6",
    "django-threadedcomments==2.0",
    "django-pwa==1.1.0",
    "django-meta==2.4.1",
    "django-recaptcha==4.0.0",
    "django-dbbackup==4.1.0",
    "django-taggit==5.0.1",
    "django-htmx==1.17.3",
    "django-editorjs-fields==0.2.7",
    "django-webpush==0.3.5",
    "huey==2.5.1",
    "bleach==6.1.0",
    "cryptography==42.0.5",
    "PyJWT==2.8.0",
    "google-genai==0.3.0",
    "groq==0.5.0",
    "gTTS==2.5.1",
    "duckduckgo-search==5.3.1",
    "requests==2.31.0",
    "django-csp==3.8",
]
