[project]
name = "igbo-archives-platform"
version = "0.1.0"
description = "Preserving Igbo history and culture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",  
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "boto3==1.34.0",
    "django-storages==1.14.2",
    "pillow==11.0.0",
    "python-dotenv==1.0.1",
    "django-allauth==0.63.0",
    "django-threadedcomments==2.0",
    "django-pwa==1.1.0",
    "django-meta==2.4.1",
    "django-dbbackup==4.1.0",
    "django-taggit==5.0.1",
    "django-htmx==1.17.3",
    "django-editorjs-fields==0.2.7",
    "django-webpush==0.3.5",
    "huey==2.5.1",
    "bleach==6.1.0",
    "cryptography==42.0.5",
    "pyjwt==2.8.0",
    "google-genai>=1.0.0",
    "groq>=1.0.0",
    "gtts==2.5.1",
    "duckduckgo-search>=6.3.0",  
    "requests==2.31.0",
    "django-csp==3.8",
    "django-cleanup>=9.0.0",
    "djangorestframework>=3.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.1.0",
    "coverage>=7.4.0",
]